--- a/app/admin/view/articles/edit.html
+++ b/app/admin/view/articles/edit.html
@@ -10,7 +10,7 @@
         <div>
             <label>
                 <span>是否英文：</span>
-                <span><input type="checkbox" name="is_en" value="1" {if $article.is_en}checked{/if} >是</span>
+                <span><input type="checkbox" name="is_en" value="" {if $article.is_en}checked{/if} >是</span>
             </label>
         </div>
         <div>
