--- a/app/admin/view/sites/index.html
+++ b/app/admin/view/sites/index.html
@@ -1,100 +1,33 @@
 {extend name='layout/main' /}
 
 {block name='main'}
-
-<div class="title">站点配置</div>
-<div class="form site_form">
-    <form action="{:url(ADMIN_ROUTE.'sites')}" method="post">
-        <div class="error"></div>
-        <div class="success"></div>
-        <div>
-            <label>
-                <span>网站名称：</span>
-                <span><input type="text" name="name" value="{$site.name}"></span>
-            </label>
-        </div>
-        <div>
-            <label>
-                <span>网站标题：</span>
-                <span>
-                   <input type="text" name="title" value="{$site.title}"><br>
-                    <tt>标题将显示在浏览器的标题栏</tt>
-                </span>
-            </label>
-        </div>
-
-        <div>
-            <label>
-                <span>网站描述：</span>
-                <span>
-                   <input type="text" name="desc" value="{$site.desc}">
-                </span>
-            </label>
-        </div>
-
-        <div>
-            <label>
-                <span>网站关键字：</span>
-                <span>
-                   <input type="text" name="keyword" value="{$site.keyword}">
-                </span>
-            </label>
-        </div>
-        <div>
-            <label>
-                <span>详情地址：</span>
-                <span>
-                   <input type="text" name="address" value="{$site.address}">
-                </span>
-            </label>
-        </div>
-
-        <div>
-            <label>
-                <span>客服QQ号码：</span>
-                <span>
-                   <input type="text" name="qq" value="{$site.qq}"><br>
-                    <tt> 如果您有多个客服的QQ号码，请在每个号码之间使用半角逗号（,）分隔。</tt>
-                </span>
-            </label>
-        </div>
-
-        <div>
-            <label>
-                <span>客服邮件地址：</span>
-                <span>
-                   <input type="text" name="email" value="{$site.email}">
-                </span>
-            </label>
-        </div>
-        <div>
-            <label>
-                <span>客服电话：</span>
-                <span>
-                   <input type="text" name="phone" value="{$site.phone}">
-                </span>
-            </label>
-        </div>
-        <div>
-            <label>
-                <span>ICP备案号：</span>
-                <span>
-                   <input type="text" name="icp" value="{$site.icp}">
-                </span>
-            </label>
-        </div>
-        <div>
-            <label for="#">
-                <span></span>
-                <span><input type="submit" id="submit" value="保存"></span>
-            </label>
-        </div>
-    </form>
+<div class="title">列表</div>
+<div class="table">
+    <table>
+        <tr>
+            <th>编号</th>
+            <th>名称</th>
+            <th>seo标题</th>
+            <th>seo关键字</th>
+            <th>seo描述</th>
+            <th>操作</th>
+        </tr>
+        {foreach $list as $it}
+        <tr>
+            <td>{$it.site_id}</td>
+            <td>{$it.name}</td>
+            <td>{$it.title}</td>
+            <td>{$it.keyword}</td>
+            <td>{$it.desc}</td>
+            <td>
+                <a href="/admin/sites/edit?site_id={$it.site_id}" data-edit="{$it.site_id}" >编辑</a>
+            </td>
+        </tr>
+        {/foreach}
+    </table>
 </div>
-
 
 {/block}
 
 {block name='javascript'}
-<script src="/asset/js/site.js"></script>
 {/block}
