--- a/app/admin/view/services/edit.html
+++ b/app/admin/view/services/edit.html
@@ -2,9 +2,9 @@
 
 {block name='main'}
 
-<div class="title">{if $Think.cookie.article_id}修改文章{else}添加文章{/if}</div>
+<div class="title">{if $Think.cookie.article_id}修改文章{else}添加服务{/if}</div>
 <div class="form article_form">
-    <form id="Article" action="/api/edit_service" method="post" enctype="multipart/form-data">
+    <form id="ServiceA" action="/api/edit_service" method="post" enctype="multipart/form-data">
         <div class="error"></div>
         <div class="success"></div>
         <div>
@@ -24,52 +24,17 @@
         </div>
         <div>
             <label>
-                <span>标题颜色：</span>
-                <span><input type="text" name="title_color" value="{$article.title_color}"></span>
-            </label>
-        </div>
-        <div>
-            <label>
                 <span>摘要：</span>
                 <span>
                     <textarea name="summary">{$article.summary}</textarea>
                 </span>
             </label>
         </div>
-
-        <div>
-            <label>
-                <span>作者：</span>
-                <span>
-                   <input type="text" name="author" value="{$article.author}">
-                </span>
-            </label>
-        </div>
-
-        <div>
-            <label>
-                <span>来源：</span>
-                <span>
-                   <input type="text" name="fromto" value="{$article.fromto}">
-                </span>
-            </label>
-        </div>
-
-        <div>
-            <label>
-                <span>录入者：</span>
-                <span>
-                   <input type="text" name="inputer" value="{$article.inputer}">
-                </span>
-            </label>
-        </div>
-
         <div>
             <label for="#">
                 <span>属性：</span>
                 <span>
-                   <input type="checkbox" name="hot" value="1" {if $article.hot}checked{/if} /> 热门
-                   <input type="checkbox" name="top" value="1" {if $article.top}checked{/if} /> 置顶
+                   <input type="checkbox" name="top" value="1" {if $article.top}checked{/if} /> 首页展示
                 </span>
             </label>
         </div>
@@ -86,7 +51,7 @@
                 <span>分类：</span>
                 <span>
                     <select name="pid">
-                        <option value="0">顶级分类</option>
+                        <option value="0">请选择分类</option>
                         {if $tree}
                             {foreach $tree as $it}
                             <option value="{$it.pid}" {if $article.pid eq $it.pid}selected{/if}>{$it.name}</option>
@@ -145,32 +110,12 @@
 
         <div>
             <label>
-                <span>阅读次数：</span>
-                <span>
-                   <input type="text" name="read_count" value="{$article.read_count}">
-                </span>
-            </label>
-        </div>
-
-        <div>
-            <label>
                 <span>创建时间：</span>
                 <span>
                    <input type="text" name="created_time" value="{$article.created_time}" class="laydate-icon" onclick="laydate({istime: true, format: 'YYYY-MM-DD hh:mm:ss'})">
                 </span>
             </label>
         </div>
-
-
-        <div>
-            <label>
-                <span>最后更新：</span>
-                <span>
-                   <input type="text" name="updated_time" value="{$article.updated_time}" class="laydate-icon" onclick="laydate({istime: true, format: 'YYYY-MM-DD hh:mm:ss'})">
-                </span>
-            </label>
-        </div>
-
         <input type="hidden" name="type" value="2">
         <input type="hidden" name="article_id" value="{$Think.cookie.article_id}">
         <div>
@@ -188,6 +133,6 @@
 {block name='javascript'}
 <script src="/ueditor/ueditor.config.js"></script>
 <script src="/ueditor/ueditor.all.js"></script>
-<script src="/asset/js/article_edit.js"></script>
+<script src="/asset/js/service_edit.js"></script>
 <script src="/asset/js/lib/laydate/laydate.js"></script>
 {/block}
