新闻两级 服务一级分类

--- a/app/admin/view/catetwo/list.html
+++ b/app/admin/view/catetwo/list.html
@@ -75,5 +75,5 @@
 {/block}
 
 {block name='javascript'}
-<script src="/asset/js/category.js"></script>
+<script src="/asset/js/catetwo.js"></script>
 {/block}
