--- a/app/admin/view/catetwo/edit.html
+++ b/app/admin/view/catetwo/edit.html
@@ -27,7 +27,7 @@
         </div>
         <div>
             <label>
-                <span>分类：</span>
+                <span>分类ss：</span>
                 <span>
                     <select name="parent_id">
                         <option value="0">顶级分类</option>
