--- a/app/admin/view/services/edit.html
+++ b/app/admin/view/services/edit.html
@@ -2,7 +2,7 @@
 
 {block name='main'}
 
-<div class="title">{if $Think.cookie.article_id}修改文章{else}添加服务{/if}</div>
+<div class="title">{if $Think.cookie.article_id}修改服务{else}添加服务{/if}</div>
 <div class="form article_form">
     <form id="ServiceA" action="/api/edit_service" method="post" enctype="multipart/form-data">
         <div class="error"></div>
