--- a/app/admin/view/services/list.html
+++ b/app/admin/view/services/list.html
@@ -76,5 +76,5 @@
 {/block}
 
 {block name='javascript'}
-<script src="/asset/js/article.js"></script>
+<script src="/asset/js/service.js"></script>
 {/block}
