--- a/app/admin/view/sites/edit.html
+++ b/app/admin/view/sites/edit.html
@@ -60,6 +60,15 @@
 
         <div>
             <label>
+                <span>whatsApp：</span>
+                <span>
+                   <input type="text" name="whats_app" value="{$site.whats_app}"><br>
+                </span>
+            </label>
+        </div>
+
+        <div>
+            <label>
                 <span>邮件地址：</span>
                 <span>
                    <input type="text" name="email" value="{$site.email}">
