--- a/app/admin/view/consults/index.html
+++ b/app/admin/view/consults/index.html
@@ -3,7 +3,8 @@
 {block name='main'}
 <div class="title">客户咨询日志</div>
 <div class="handle">
-    <a href="#" title="批量删除" class="disabled" id="delete_select"><i class="iconfont">&#xe609;</i></a>
+    <a href="#" title="批量删除" class="disabled" id="delete_select"><i class="iconfont">&#xe609;</i></a>&nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="/api/consult_exportExcel" id="export_excel" title="导出"><i class="iconfont">导出</i></a>
 </div>
 <div class="table">
     <table>
