咨询日志增加详细页面

--- a/app/admin/view/consults/index.html
+++ b/app/admin/view/consults/index.html
@@ -33,6 +33,7 @@
             <td>{$it.content}</td>
             <td>{$it.time}</td>
             <td>
+                <a href="javascript:;" data-edit="{$it.id}" >编辑</a>
                 <a href="javascript:;" data-delete="{$it.id}">删除</a>
             </td>
         </tr>
